Fri Jan 26 00:06:50 1996  Sam Hartman  <hartmans@tertius.mit.edu>

	* ktutil.c (ktutil_list): Implement -e option to show enctypes.

	* ktutil_funcs.c (ktutil_write_srvtab): Write v4 version
        properly. Previous code was endien dependent.

Mon Dec 25 10:03:15 1995  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* ktutil.c (ktutil_write_v4): Call ktutil_write_srvtab not
		ktutil_write_keytab.

	* ktutil_funcs.c (ktutil_write_srvtab): Clear malloced memory.


Thu Sep 07 15:06:57 1995  Chris Provenzano (proven@mit.edu)

	* ktutil_funcs.c : Do appropriate magic for enctype/keytype cleanup.

Thu Aug 24 19:20:26 1995  Theodore Y. Ts'o  <tytso@dcl>

	* .Sanitize: Added .Sanitize file.

Mon Aug 21 17:01:40 EDT 1995	Paul Park	(pjpark@mit.edu)
	* ktutil.c - Remove English-specific date handling and let timestamp_
		to_sfstring() handle the formatting of the timestamp string.
